chore: translation fix & slight change to parrot face texture

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -133,7 +133,9 @@
 	"ftbchunks.ally_mode": "Allow Player to Change Ally Settings",
 	"ftbchunks.ally_mode.tooltip": "DEFAULT: FTB Teams ally status is checked to decide if players are allied\nFORCED_ALL: all players are always considered to be allied\nFORCED_NONE: no players are ever considered to be allied",
 	"ftbchunks.claim_dimension_blacklist": "Dimension Blacklist",
-	"ftbchunks.claim_dimension_blacklist.tooltip": "Blacklist for dimension ID's where chunks can't be claimed.\nE.g. add \"minecraft:the_end\" to this list if you want to disable chunk claiming in The End",
+	"ftbchunks.claim_dimension_blacklist.tooltip": "Blacklist for dimension ID's where chunks may not be claimed.\nE.g. add \"minecraft:the_end\" to this list if you want to disable chunk claiming in The End\nWildcards are allowed, e.g. \"othermod:*\" matches all dimensions added by \"othermod\"",
+	"ftbchunks.claim_dimension_whitelist": "Dimension Whitelist",
+	"ftbchunks.claim_dimension_whitelist.tooltip": "Whitelist for dimension ID's where chunks may be claimed. If non-empty, dimension *must* be in this list (and also not in \"Dimension Blacklist\".\nSame syntax as for \"Dimension Blacklist\"",
 	"ftbchunks.no_wilderness": "Protect Unclaimed Regions",
 	"ftbchunks.no_wilderness.tooltip": "If true, chunks must be claimed before they can be built on",
 	"ftbchunks.force_disable_minimap": "Disable Minimap for Clients",
@@ -146,9 +148,9 @@
 	"ftbchunks.protect_unknown_explosions": "Prevent Explosions from Unknown Sources",
 	"ftbchunks.protect_unknown_explosions.tooltip": "Some explosion sources (e.g. Ghasts) can't be determined in code.\nIf this setting is true, damage from these explosion is prevented in protected chunks.",
 	"ftbchunks.hard_team_claim_limit": "Hard Max Team Claim Limit",
-	"ftbchunks.hard_team_claim_limit.tooltip": "Hard claim limit for party teams,\n regardless of member count or Party Limit Calculation mode.\nDefault of 0 means no hard limit.",
+	"ftbchunks.hard_team_claim_limit.tooltip": "Hard claim limit for party teams, regardless of member count or Party Limit Calculation mode.\nDefault of 0 means no hard limit.",
 	"ftbchunks.hard_team_force_limit": "Hard Max Team Forceload Limit",
-	"ftbchunks.hard_team_force_limit.tooltip": "Hard force-load limit for party teams,\n regardless of member count or Party Limit Calculation mode.\nDefault of 0 means no hard limit.",
+	"ftbchunks.hard_team_force_limit.tooltip": "Hard force-load limit for party teams, regardless of member count or Party Limit Calculation mode.\nDefault of 0 means no hard limit.",
 	"ftbchunks.party_limit_mode": "Party Limit Calculation Mode",
 	"ftbchunks.party_limit_mode.tooltip": "Method by which party claim & force-load limits are calculated.\nLARGEST: use the limits of the member with the largest limits\nSUM: add up all the members' limits\nOWNER: use the party owner's limits only\nAVERAGE: use the average of all members' limits.",
 	"ftbchunks.require_game_stage": "Require Game Stage for Mapping",
