--- a/common/src/main/resources/assets/ftbchunks/lang/ru_ru.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/ru_ru.json
@@ -10,29 +10,68 @@
 	"ftbchunks.own_claimed_chunks_on_map": "Показывать занятые вами чанки на карте",
 	"ftbchunks.in_world_waypoints": "Показывать путевые точки в мире",
 	"ftbchunks.death_waypoints": "Создавать точку с местом смерти",
+	"ftbchunks.death_waypoint_autoremove_distance": "Автоматическое удаление расстояния до точки смерти",
+	"ftbchunks.death_waypoint_autoremove_distance.tooltip": "Если > 0, ближайшая точка смерти будет автоматически удалена, если она находится ближе, чем на этом расстоянии от вас",
 	"ftbchunks.map_mode": "Режим карты",
+	"ftbchunks.waypoint_fade_distance": "Расстояние затухания маяка",
+	"ftbchunks.waypoint_dot_fade_distance": "Расстояние затухания точки",
+	"ftbchunks.biome_blend": "Смесь биомов",
+	"ftbchunks.biome_blend.none": "Нету (быстро)",
+	"ftbchunks.biome_blend.blend_3x3": "Смесь 3x3",
+	"ftbchunks.biome_blend.blend_5x5": "Смесь 5x5",
+	"ftbchunks.biome_blend.blend_7x7": "Смесь 7x7",
+	"ftbchunks.biome_blend.blend_9x9": "Смесь9x9",
+	"ftbchunks.biome_blend.blend_11x11": "Смесь 11x11",
+	"ftbchunks.biome_blend.blend_13x13": "Смесь 13x13",
+	"ftbchunks.biome_blend.blend_15x15": "Смесь 15x15 (медлено)",
 	"ftbchunks.water_height_factor": "Учитывать высоту над уровнем моря",
+	"ftbchunks.only_surface_entities": "Только поверхностные объекты",
+	"ftbchunks.experimental_performance_improvement": "Экспериментальное улучшение производительности",
 	"ftbchunks.minimap": "Расположение миникарты",
-	"ftbchunks.minimap_scale": "Масштаб миникарты",
-	"ftbchunks.minimap_locked_north": "Миникарта направлена на север",
-	"ftbchunks.minimap_waypoints": "Путевые точки на миникарте",
-	"ftbchunks.minimap_entities": "Сущности на миникарте",
-	"ftbchunks.minimap_entity_heads": "Головы сущностей на миникарте",
-	"ftbchunks.minimap_player_heads": "Головы игроков на миникарте",
-	"ftbchunks.minimap_large_entities": "Большие сущности на миникарте",
-	"ftbchunks.minimap_xyz": "Координаты XYZ на миникарте",
-	"ftbchunks.minimap_biome": "Биом на миникарте",
-	"ftbchunks.minimap_blur": "Замыление миникарты",
-	"ftbchunks.minimap_compass": "Компас на миникарте",
-	"ftbchunks.minimap_visibility": "Прозрачность миникарты",
-	"ftbchunks.minimap_zone": "Зона миникарты",
+	"ftbchunks.minimap.enabled": "Включенный",
+	"ftbchunks.minimap.position": "Позиция",
+	"ftbchunks.minimap.position_offset_x": "Смещение положения X",
+	"ftbchunks.minimap.position_offset_y": "Смещение положения Y",
+	"ftbchunks.minimap.position_offset_condition": "Условие смещения положения",
+	"ftbchunks.minimap.position.none": "Нету",
+	"ftbchunks.minimap.position.bottom_left": "Внизу слева",
+	"ftbchunks.minimap.position.left": "Слева",
+	"ftbchunks.minimap.position.top_left": "Вверху слева",
+	"ftbchunks.minimap.position.top_right": "Вверху справа",
+	"ftbchunks.minimap.position.right": "Справа",
+	"ftbchunks.minimap.position.bottom_right": "Внизу справа",
+	"ftbchunks.minimap.scale": "Масштаб миникарты",
+	"ftbchunks.minimap.locked_north": "Миникарта направлена на север",
+	"ftbchunks.minimap.waypoints": "Путевые точки на миникарте",
+	"ftbchunks.minimap.entities": "Сущности на миникарте",
+	"ftbchunks.minimap.entity_heads": "Головы сущностей на миникарте",
+	"ftbchunks.minimap.player_heads": "Головы игроков на миникарте",
+	"ftbchunks.minimap.large_entities": "Большие сущности на миникарте",
+	"ftbchunks.minimap.zoom": "Увеличение",
+	"ftbchunks.minimap.xyz": "Координаты XYZ на миникарте",
+	"ftbchunks.minimap.biome": "Биом на миникарте",
+	"ftbchunks.minimap.blur_mode": "Замыление миникарты",
+	"ftbchunks.minimap.blur_mode.auto": "Авто.",
+	"ftbchunks.minimap.blur_mode.on": "Вкл.",
+	"ftbchunks.minimap.blur_mode.off": "Выкл.",
+	"ftbchunks.minimap.compass": "Компас на миникарте",
+	"ftbchunks.minimap.visibility": "Прозрачность миникарты",
+	"ftbchunks.minimap.zone": "Зона миникарты",
+	"ftbchunks.minimap.square": "Квадратная миникарта",
 	"sidebar_button.ftbchunks.chunks": "FTB Chunks",
+	"key.categories.ftbchunks": "FTB Chunks",
 	"key.ftbchunks.map": "Открыть карту FTB Chunks",
+	"key.ftbchunks.minimap.zoomIn": "Увеличить масштаб миникарты",
+	"key.ftbchunks.minimap.zoomOut": "Уменьшить масштаб миникарты",
+	"key.ftbchunks.add_waypoint": "Быстрое добавление путевой точки",
+	"key.ftbchunks.waypoint_manager": "Диспетчер путевых точек",
 	"wilderness": "Пустота",
 	"ftbchunks.no_server_mod": "Для работы FTB Chunks требуется также мод на сервере!",
 	"ftbchunks.already_claimed": "Чанк уже занят %s",
+	"ftbchunks.deathpoint_removed": "Путевая точка '%s' удалена автоматически",
 	"ftbchunks.gui.claimed": "Занято",
 	"ftbchunks.gui.force_loaded": "Подгружено",
+	"ftbchunks.gui.force_load_expires": "Срок действия принудительной нагрузки истекает",
 	"ftbchunks.gui.allies": "Союзники",
 	"ftbchunks.gui.ally_whitelist": "Белый список союзников",
 	"ftbchunks.gui.ally_blacklist": "Черный список союзников",
@@ -41,10 +80,71 @@
 	"ftbchunks.gui.waypoints": "Путевые точки",
 	"ftbchunks.gui.add_waypoint": "Добавить точку",
 	"ftbchunks.gui.settings": "Настройки",
+	"ftbchunks.gui.settings.server": "Настройки сервера",
 	"ftbchunks.gui.sync": "Поделиться картой с союзниками",
+	"ftbchunks.gui.clear_deathpoints": "Очистить все путевые точки смерти",
+	"ftbchunks.gui.delete_waypoint": "Удалить путевую точку '%s' ?",
+	"ftbchunks.gui.change_color": "Изменить цвет",
+	"ftbchunks.gui.hold_alt_for_dates": "Удерживайте Alt: отображение абсолютного времени",
+	"ftbchunks.gui.mouse_wheel_expiry": "Колесико мыши: отрегулируйте силу истечения срока действия нагрузки",
+	"ftbchunks.gui.teleport": "Телепортироваться",
+	"ftbteamsconfig.ftbchunks": "FTB Chunks настройки",
 	"ftbteamsconfig.ftbchunks.allow_fake_players": "Разрешить Fake игровов",
+	"ftbteamsconfig.ftbchunks.allow_fake_players.tooltip": "Относитесь ко ВСЕМ Fake игрокам как к союзникам команды.\nПРЕДУПРЕЖДЕНИЕ: Установка этого параметра в значение true может позволить враждебным игрокам получить доступ к вашим приватам. Установите значение false, если вы не уверены.",
+	"ftbteamsconfig.ftbchunks.allow_named_fake_players": "Союзнические Fake имена игроков/IDs",
+	"ftbteamsconfig.ftbchunks.allow_named_fake_players.tooltip": "Относитесь к этим Fake игрокам как к союзникам команды.\nПРЕДУПРЕЖДЕНИЕ: Добавление записей сюда может позволить Fake игрокам получить доступ к вашим приватам. Оставьте это поле пустым, если вы не уверены.",
+	"ftbteamsconfig.ftbchunks.allow_fake_players_by_id": "Разрешать Fake игроков по ID",
+	"ftbteamsconfig.ftbchunks.allow_fake_players_by_id.tooltip": "Позволяет Fake игрокам, у которых есть ID реального игрока, получить доступ к вашим приватам. Установите для этого значение true, если вы не уверены.",
+	"ftbteamsconfig.ftbchunks.allow_explosions": "Разрешать взрывы",
+	"ftbteamsconfig.ftbchunks.allow_explosions.tooltip": "Должны ли взрывы быть способны повредить блоки в заявленных приватах?",
+	"ftbteamsconfig.ftbchunks.block_edit_and_interact_mode": "Режим редактирования блока/взаимодействия",
+	"ftbteamsconfig.ftbchunks.block_edit_and_interact_mode.tooltip": "Используется, когда блоки размещаются, разбиваются или взаимодействуют",
 	"ftbteamsconfig.ftbchunks.block_edit_mode": "Запретить изменение блоков",
+	"ftbteamsconfig.ftbchunks.block_edit_mode.tooltip": "Используется при размещении или разбиении блоков",
 	"ftbteamsconfig.ftbchunks.block_interact_mode": "Запретить взаимодействие с блоками",
+	"ftbteamsconfig.ftbchunks.block_interact_mode.tooltip": "Используется при щелчке правой кнопкой мыши по блокам, например, при открытии сундука или щелчке рычага",
+	"ftbteamsconfig.ftbchunks.entity_interact_mode": "Режим взаимодействия с сущностью",
+	"ftbteamsconfig.ftbchunks.entity_interact_mode.tooltip": "Используется при щелчке объектов правой кнопкой мыши",
+	"ftbteamsconfig.ftbchunks.nonliving_entity_attack_mode": "Режим атаки на неживое существо",
+	"ftbteamsconfig.ftbchunks.nonliving_entity_attack_mode.tooltip": "Используется при щелчке левой кнопкой мыши по неживым объектам (картинам, рамкам предметов и т.д.)",
 	"ftbteamsconfig.ftbchunks.minimap_mode": "Режим миникарты",
-	"ftbteamsconfig.ftbchunks.location_mode": "Режим местоположения"
+	"ftbteamsconfig.ftbchunks.location_mode": "Режим местоположения",
+	"ftbteamsconfig.ftbchunks.location_mode.tooltip": "Управляет тем, кто может видеть вас на карте или миникарте (за пределами обычного диапазона отслеживания vanilla).",
+	"ftbteamsconfig.ftbchunks.claim_visibility": "Видимость привата",
+	"ftbteamsconfig.ftbchunks.claim_visibility.tooltip": "Определяет, кто может видеть ваши приваты на карте или миникарте",
+	"ftbchunks.fake_players": "Разрешить Fake игрокам",
+	"ftbchunks.fake_players.tooltip": "CHECK: проверьте доступ Fake игрока, как у любого реального игрока\nDENY: никогда не допускайте Fake игроков\nALLOW: всегда разрешать Fake игрокам",
+	"ftbchunks.max_claimed_chunks": "Максимальное количество заявленных чанков на игрока",
+	"ftbchunks.max_claimed_chunks.tooltip": "Это значение по умолчанию может быть переопределено узлом разрешений FTB Ranks 'ftbchunks.max_claimed`.",
+	"ftbchunks.max_force_loaded_chunks": "Максимальное количество принудительно загруженных чанков на игрока",
+	"ftbchunks.max_force_loaded_chunks.tooltip": "Это значение по умолчанию может быть переопределено узлом разрешений FTB Ranks 'ftbchunks.max_force_loaded`.",
+	"ftbchunks.chunk_load_offline": "Разрешить ускоренную загрузку для оффлайн игроков",
+	"ftbchunks.chunk_load_offline.tooltip": "Резервное поведение при загрузке автономного блока, когда для\n 'Режима принудительной загрузки' установлен по умолчанию 'true'",
+	"ftbchunks.force_load_mode": "Режим ускоренной загрузки",
+	"ftbchunks.force_load_mode.tooltip": "\nDEFAULT: разрешайте принудительную загрузку, ЕСЛИ в команде есть хотя бы один игрок с разрешением FTB Ranks 'ftbchunks.chunk_load_offline',\n ИЛИ 'Разрешить принудительную загрузку для оффлайн игроков' имеет значение true.\nALWAYS: разрешайте принудительную загрузку, даже если ни один игрок не подключен к сети.\nNEVER: разрешайте принудительную загрузку фрагментов только в том случае, если в команде-владельце есть хотя бы один онлайн-игрок.",
+	"ftbchunks.disable_protection": "Отключить защиту привата",
+	"ftbchunks.disable_protection.tooltip": "Полезно для частных серверов, где всем доверяют, а утверждения используются только для принудительной загрузки",
+	"ftbchunks.ally_mode": "Разрешить игроку изменять настройки союзника",
+	"ftbchunks.ally_mode.tooltip": "DEFAULT: проверяется статус союзника команд FTB, чтобы определить, являются ли игроки союзниками\nFORCED_ALL: все игроки всегда считаются союзниками\nFORCED_NONE: ни один игрок никогда не считается союзником",
+	"ftbchunks.claim_dimension_blacklist": "Черный список измерений",
+	"ftbchunks.claim_dimension_blacklist.tooltip": "Черный список для ID измерений, на которые нельзя приватить чанки. Например, добавьте 'minecraft: the_end' в этот список, если вы хотите отключить создание чанков в Крае",
+	"ftbchunks.no_wilderness": "Защищать не заприваченые чанки",
+	"ftbchunks.no_wilderness.tooltip": "Если true, то чанки должны быть запривачены, прежде чем на них можно будет построить",
+	"ftbchunks.force_disable_minimap": "Отключить миникарту для клиентов",
+	"ftbchunks.max_idle_days_before_unclaim": "Максимальное количество дней простоя перед возвратом",
+	"ftbchunks.max_idle_days_before_unclaim.tooltip": "Если ни один член команды не войдет в систему в течение этого количества дней,\nприват будет удалён.\nУстановка этого значения в 0 не удаляет приват.",
+	"ftbchunks.max_idle_days_before_unforce": "Максимальное количество дней простоя перед непредвиденной загрузкой",
+	"ftbchunks.max_idle_days_before_unforce.tooltip": "Если ни один член команды не войдет в систему в течение этого количества дней,\nлюбые принудительно загруженные чанки больше не будут принудительно загружаться.\nУстановка этого значения в 0 отключает автоматическую невынужденную загрузку.",
+	"ftbchunks.long_range_tracker_interval": "Интервал отслеживания игроков на большие расстояния",
+	"ftbchunks.long_range_tracker_interval.tooltip": "Интервал в тиках для отправки обновлений клиентам с данными отслеживания игроков на большие расстояния.\nБолее низкие значения означают более частые обновления, но большую нагрузку на сервер и сетевой трафик;\n будьте осторожны с этим, особенно на загруженных серверах.\nУстановка этого значения в 0 отключает отслеживание на большие расстояния.",
+	"ftbchunks.protect_unknown_explosions": "Предотвращать взрывы из неизвестных источников",
+	"ftbchunks.protect_unknown_explosions.tooltip": "Некоторые источники взрыва (например, Гасты) не могут быть определены в коде.\nЕсли этот параметр имеет значение true, ущерб от этих взрывов предотвращается в защищенных блоках.",
+	"ftbchunks.hard_team_claim_limit": "Жёсткий максимальный лимит заявок команды",
+	"ftbchunks.hard_team_claim_limit.tooltip": "Жёсткий лимит приватов для команд\n независимо от количества участников или режима расчета лимита пати.\nЗначение по умолчанию 0 означает отсутствие жёсткого ограничения.",
+	"ftbchunks.hard_team_force_limit": "Жёсткий максимальный лимит командных нагрузок",
+	"ftbchunks.hard_team_force_limit.tooltip": "Жёсткое ограничение силовой нагрузки для групп участников,\n независимо от количества участников или режима расчета лимита пати.\nЗначение по умолчанию 0 означает отсутствие жесткого ограничения.",
+	"ftbchunks.party_limit_mode": "Режим расчета лимита пати",
+	"ftbchunks.party_limit_mode.tooltip": "Метод, с помощью которого рассчитываются требования сторон и предельные значения силовой нагрузки.\nLARGEST: используйте лимиты участника с самыми большими лимитами.\nOWNER: используйте только лимиты владельца участника.\nSUM: суммируйте лимиты всех участников.\nAVERAGE: используйте среднее значение лимитов всех участников.",
+	"ftbchunks.require_game_stage": "Требуется игровая стадия для отображения",
+	"ftbchunks.require_game_stage.tooltip": "Если значение true, у игроков должен быть игровой этап 'ftbchunks_mapping' (требуются KubeJS и/или Gamestages), чтобы иметь возможность открыть карту или просмотреть миникарту"
 }
