--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -62,9 +62,11 @@
 	"ftbchunks.minimap.visibility": "Visibility",
 	"ftbchunks.minimap.zone": "Zone",
 	"ftbchunks.minimap.square": "Square Minimap",
-	"sidebar_button.ftbchunks.chunks": "FTB Chunks",
+	"sidebar_button.ftbchunks.chunks": "FTB Chunks: Map",
+	"sidebar_button.ftbchunks.claim_chunks": "FTB Chunks: Claim Manager",
 	"key.categories.ftbchunks": "FTB Chunks",
 	"key.ftbchunks.map": "Open Map",
+	"key.ftbchunks.claim_manager": "Open Claim Manager",
 	"key.ftbchunks.minimap.zoomIn": "Zoom In Minimap",
 	"key.ftbchunks.minimap.zoomOut": "Zoom Out Minimap",
 	"key.ftbchunks.add_waypoint": "Quick Add Waypoint",
