--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -1,22 +1,15 @@
 {
 	"ftbchunks": "FTB Chunks",
+	"ftbchunks.zoom_warning": "Max zoom-out limited due to memory constraints",
 	"ftbchunks.noise": "Noise",
 	"ftbchunks.shadows": "Shadows",
 	"ftbchunks.chunk_grid": "Chunk grid",
 	"ftbchunks.reduced_color_palette": "Reduced color palette",
 	"ftbchunks.saturation": "Saturation",
-	"ftbchunks.debug_info": "Debug info",
+	"ftbchunks.advanced.debug_info": "Debug info",
 	"ftbchunks.claimed_chunks_on_map": "Show claimed chunks on map",
 	"ftbchunks.own_claimed_chunks_on_map": "Show your own claimed chunks on map",
-	"ftbchunks.in_world_waypoints": "Show waypoints in world",
-	"ftbchunks.death_waypoints": "Create death waypoints on death",
-	"ftbchunks.death_waypoint_autoremove_distance": "Auto-remove deathpoint distance",
-	"ftbchunks.death_waypoint_autoremove_distance.tooltip": "If > 0, the closest deathpoint will be auto-removed if it is closer than this distance from you",
 	"ftbchunks.map_mode": "Map mode",
-	"ftbchunks.zoom_warning": "Max zoom-out limited due to memory constraints",
-	"ftbchunks.waypoint_fade_distance": "Waypoint beacons: min fade distance",
-	"ftbchunks.waypoint_dot_fade_distance": "Waypoint dots: min fade distance",
-	"ftbchunks.waypoint_max_distance": "Waypoints: max draw distance",
 	"ftbchunks.biome_blend": "Biome blend",
 	"ftbchunks.biome_blend.none": "None (Fastest)",
 	"ftbchunks.biome_blend.blend_3x3": "Blend 3x3",
@@ -29,7 +22,22 @@
 	"ftbchunks.water_height_factor": "Water weight factor",
 	"ftbchunks.only_surface_entities": "Only surface entities",
 	"ftbchunks.experimental_performance_improvement": "Experimental performance improvement",
+	"ftbchunks.advanced": "Advanced Settings",
+	"ftbchunks.waypoints": "Waypoints",
+	"ftbchunks.waypoints.in_world_waypoints": "Show waypoints in world",
+	"ftbchunks.waypoints.death_waypoints": "Create death waypoints on death",
+	"ftbchunks.waypoints.death_waypoint_autoremove_distance": "Auto-remove deathpoint distance",
+	"ftbchunks.waypoints.death_waypoint_autoremove_distance.tooltip": "If > 0, the closest deathpoint will be auto-removed if it is closer than this distance from you",
+	"ftbchunks.waypoints.waypoint_fade_distance": "Waypoint beacons: min fade distance",
+	"ftbchunks.waypoints.waypoint_dot_fade_distance": "Waypoint dots: min fade distance",
+	"ftbchunks.waypoints.waypoint_max_distance": "Waypoints: max draw distance",
 	"ftbchunks.memory": "Memory Usage",
+	"ftbchunks.memory.region_release_time": "Idle region release timeout",
+	"ftbchunks.memory.region_release_time.tooltip": "Timeout in seconds to release data for 512x512 regions which haven't been accessed recently\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
+	"ftbchunks.memory.autorelease_on_map_close": "Autorelease regions on map close",
+	"ftbchunks.memory.autorelease_on_map_close.tooltip": "When the large map is closed, auto-release region data down to this number.\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
+	"ftbchunks.memory.max_zoom_constraint": "Constrain map zoom-out",
+	"ftbchunks.memory.max_zoom_constraint.tooltip": "When true, max map zoom-out is limited by the number of explored regions and amount of available memory.\nIf this is bothersome, set this to false.",
 	"ftbchunks.minimap": "Minimap",
 	"ftbchunks.minimap.enabled": "Enabled",
 	"ftbchunks.minimap.position": "Position",
@@ -161,12 +169,6 @@
 	"ftbchunks.require_game_stage.tooltip": "If true, players must have the 'ftbchunks_mapping' game stage (KubeJS and/or Gamestages required) to be able to open the map or see the minimap",
 	"ftbchunks.location_mode_override": "Override Team \"Location Visibility\"",
 	"ftbchunks.location_mode_override.tooltip": "If true, team \"Location Visibility\" settings are ignored, and all players can see each other anywhere on the map",
-	"ftbchunks.memory.region_release_time": "Idle region release timeout",
-	"ftbchunks.memory.region_release_time.tooltip": "Timeout in seconds to release data for 512x512 regions which haven't been accessed recently\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
-	"ftbchunks.memory.autorelease_on_map_close": "Autorelease regions on map close",
-	"ftbchunks.memory.autorelease_on_map_close.tooltip": "When the large map is closed, auto-release region data down to this number.\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
-	"ftbchunks.memory.max_zoom_constraint": "Constrain map zoom-out",
-	"ftbchunks.memory.max_zoom_constraint.tooltip": "When true, max map zoom-out is limited by the number of explored regions and amount of available memory.\nIf this is bothersome, set this to false.",
 	"ftbchunks.claim_result": "Chunks modified: %d / %d",
 	"ftbchunks.claim_result.other": "Unknown issues",
 	"ftbchunks.claim_result.not_owner": "Not the chunk owner",
