--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -1,16 +1,16 @@
 {
 	"ftbchunks": "FTB Chunks",
 	"ftbchunks.zoom_warning": "Max zoom-out limited due to memory constraints",
-	"ftbchunks.noise": "Noise",
-	"ftbchunks.shadows": "Shadows",
-	"ftbchunks.chunk_grid": "Chunk grid",
-	"ftbchunks.reduced_color_palette": "Reduced color palette",
-	"ftbchunks.saturation": "Saturation",
-	"ftbchunks.advanced.debug_info": "Debug info",
-	"ftbchunks.claimed_chunks_on_map": "Show claimed chunks on map",
-	"ftbchunks.own_claimed_chunks_on_map": "Show your own claimed chunks on map",
-	"ftbchunks.map_mode": "Map mode",
-	"ftbchunks.biome_blend": "Biome blend",
+	"ftbchunks.appearance": "Appearance",
+	"ftbchunks.appearance.noise": "Noise",
+	"ftbchunks.appearance.shadows": "Shadows",
+	"ftbchunks.appearance.chunk_grid": "Chunk grid",
+	"ftbchunks.appearance.reduced_color_palette": "Reduced color palette",
+	"ftbchunks.appearance.saturation": "Saturation",
+	"ftbchunks.appearance.claimed_chunks_on_map": "Show claimed chunks on map",
+	"ftbchunks.appearance.own_claimed_chunks_on_map": "Show your own claimed chunks on map",
+	"ftbchunks.appearance.map_mode": "Map mode",
+	"ftbchunks.appearance.biome_blend": "Biome blend",
 	"ftbchunks.biome_blend.none": "None (Fastest)",
 	"ftbchunks.biome_blend.blend_3x3": "Blend 3x3",
 	"ftbchunks.biome_blend.blend_5x5": "Blend 5x5",
@@ -19,10 +19,10 @@
 	"ftbchunks.biome_blend.blend_11x11": "Blend 11x11",
 	"ftbchunks.biome_blend.blend_13x13": "Blend 13x13",
 	"ftbchunks.biome_blend.blend_15x15": "Blend 15x15 (Slowest)",
-	"ftbchunks.water_height_factor": "Water weight factor",
-	"ftbchunks.only_surface_entities": "Only surface entities",
-	"ftbchunks.experimental_performance_improvement": "Experimental performance improvement",
+	"ftbchunks.appearance.water_height_factor": "Water weight factor",
+	"ftbchunks.appearance.only_surface_entities": "Only surface entities",
 	"ftbchunks.advanced": "Advanced Settings",
+	"ftbchunks.advanced.debug_info": "Debug info",
 	"ftbchunks.waypoints": "Waypoints",
 	"ftbchunks.waypoints.in_world_waypoints": "Show waypoints in world",
 	"ftbchunks.waypoints.death_waypoints": "Create death waypoints on death",
@@ -31,13 +31,13 @@
 	"ftbchunks.waypoints.waypoint_fade_distance": "Waypoint beacons: min fade distance",
 	"ftbchunks.waypoints.waypoint_dot_fade_distance": "Waypoint dots: min fade distance",
 	"ftbchunks.waypoints.waypoint_max_distance": "Waypoints: max draw distance",
-	"ftbchunks.memory": "Memory Usage",
-	"ftbchunks.memory.region_release_time": "Idle region release timeout",
-	"ftbchunks.memory.region_release_time.tooltip": "Timeout in seconds to release data for 512x512 regions which haven't been accessed recently\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
-	"ftbchunks.memory.autorelease_on_map_close": "Autorelease regions on map close",
-	"ftbchunks.memory.autorelease_on_map_close.tooltip": "When the large map is closed, auto-release region data down to this number.\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
-	"ftbchunks.memory.max_zoom_constraint": "Constrain map zoom-out",
-	"ftbchunks.memory.max_zoom_constraint.tooltip": "When true, max map zoom-out is limited by the number of explored regions and amount of available memory.\nIf this is bothersome, set this to false.",
+	"ftbchunks.advanced.memory": "Memory Usage",
+	"ftbchunks.advanced.memory.region_release_time": "Idle region release timeout",
+	"ftbchunks.advanced.memory.region_release_time.tooltip": "Timeout in seconds to release data for 512x512 regions which haven't been accessed recently\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
+	"ftbchunks.advanced.memory.autorelease_on_map_close": "Autorelease regions on map close",
+	"ftbchunks.advanced.memory.autorelease_on_map_close.tooltip": "When the large map is closed, auto-release region data down to this number.\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
+	"ftbchunks.advanced.memory.max_zoom_constraint": "Constrain map zoom-out",
+	"ftbchunks.advanced.memory.max_zoom_constraint.tooltip": "When true, max map zoom-out is limited by the number of explored regions and amount of available memory.\nIf this is bothersome, set this to false.",
 	"ftbchunks.minimap": "Minimap",
 	"ftbchunks.minimap.enabled": "Enabled",
 	"ftbchunks.minimap.position": "Position",
