chore: lots of code cleanup
Mainly eliminating public mutable fields from classes

Also added 3 new client-side configurables

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -28,9 +28,13 @@
 	"ftbchunks.waypoints.death_waypoints": "Create death waypoints on death",
 	"ftbchunks.waypoints.death_waypoint_autoremove_distance": "Auto-remove deathpoint distance",
 	"ftbchunks.waypoints.death_waypoint_autoremove_distance.tooltip": "If > 0, the closest deathpoint will be auto-removed if it is closer than this distance from you",
-	"ftbchunks.waypoints.waypoint_fade_distance": "Waypoint beacons: min fade distance",
-	"ftbchunks.waypoints.waypoint_dot_fade_distance": "Waypoint dots: min fade distance",
-	"ftbchunks.waypoints.waypoint_max_distance": "Waypoints: max draw distance",
+	"ftbchunks.waypoints.waypoint_fade_distance": "Min beacon fade distance",
+	"ftbchunks.waypoints.waypoint_dot_fade_distance": "Min dot fade distance",
+	"ftbchunks.waypoints.waypoint_max_distance": "Max waypoint draw distance",
+	"ftbchunks.waypoints.waypoint_focus_distance": "Focused waypoint distance",
+	"ftbchunks.waypoints.waypoint_focus_distance.tooltip": "How close does the player crosshair need to be to a waypoint to display its name?",
+	"ftbchunks.waypoints.waypoint_focus_scale": "Focused waypoint scaling",
+	"ftbchunks.waypoints.waypoint_focus_scale.tooltip": "How big do focused waypoints can grow?",
 	"ftbchunks.advanced.memory": "Memory Usage",
 	"ftbchunks.advanced.memory.region_release_time": "Idle region release timeout",
 	"ftbchunks.advanced.memory.region_release_time.tooltip": "Timeout in seconds to release data for 512x512 regions which haven't been accessed recently\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
@@ -70,6 +74,8 @@
 	"ftbchunks.minimap.visibility": "Visibility",
 	"ftbchunks.minimap.zone": "Zone",
 	"ftbchunks.minimap.square": "Square Minimap",
+	"ftbchunks.minimap.font_scale": "Font Scaling",
+	"ftbchunks.minimap.font_scale.tooltip": "Recommended to keep this to a multiple of 0.5",
 	"ftbchunks.minimap.proportional": "Proportional sizing",
 	"ftbchunks.minimap.proportional.tooltip": "When true, minimap size is proportional to 10%% of the screen width (modifiable by the Scale setting)\nWhen false, it is a fixed size regardless of screen resolution",
 	"sidebar_button.ftbchunks.chunks": "FTB Chunks: Map",
@@ -177,5 +183,8 @@
 	"ftbchunks.claim_result.dimension_forbidden": "Claiming forbidden in this dimension",
 	"ftbchunks.claim_result.not_claimed": "Chunk not claimed",
 	"ftbchunks.claim_result.already_loaded": "Chunk already loaded",
-	"ftbchunks.claim_result.not_loaded": "Chunk not loaded"
+	"ftbchunks.claim_result.not_loaded": "Chunk not loaded",
+	"ftbchunks.need_to_claim_chunk": "You need to claim this chunk to interact with blocks here!",
+	"ftbchunks.label.show": "Show",
+	"ftbchunks.label.hide": "Hide"
 }
