chore: removed all cross-mod integration (now in FTB XMod Compat)
FTB XMod Compat 1.2.0+ required

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -137,11 +137,13 @@
 	"ftbchunks.ally_mode": "Allow Player to Change Ally Settings",
 	"ftbchunks.ally_mode.tooltip": "DEFAULT: FTB Teams ally status is checked to decide if players are allied\nFORCED_ALL: all players are always considered to be allied\nFORCED_NONE: no players are ever considered to be allied",
 	"ftbchunks.claim_dimension_blacklist": "Dimension Blacklist",
-	"ftbchunks.claim_dimension_blacklist.tooltip": "Blacklist for dimension ID's where chunks may not be claimed.\nE.g. add \"minecraft:the_end\" to this list if you want to disable chunk claiming in The End\nWildcards are allowed, e.g. \"othermod:*\" matches all dimensions added by \"othermod\"",
+	"ftbchunks.claim_dimension_blacklist.tooltip": "List of dimension ID's where chunks may not be claimed.\nE.g. add \"minecraft:the_end\" to this list to disable chunk claiming in The End\nWildcards are allowed, e.g. \"othermod:*\" matches all dimensions added by \"othermod\"",
 	"ftbchunks.claim_dimension_whitelist": "Dimension Whitelist",
-	"ftbchunks.claim_dimension_whitelist.tooltip": "Whitelist for dimension ID's where chunks may be claimed. If non-empty, dimension *must* be in this list (and also not in \"Dimension Blacklist\".\nSame syntax as for \"Dimension Blacklist\"",
+	"ftbchunks.claim_dimension_whitelist.tooltip": "List of dimension ID's where chunks may be claimed. If non-empty, dimension *must* be in this list (and also not in \"Dimension Blacklist\").\nSame syntax as for \"Dimension Blacklist\"",
 	"ftbchunks.no_wilderness": "Protect Unclaimed Regions",
-	"ftbchunks.no_wilderness.tooltip": "If true, chunks must be claimed before they can be built on",
+	"ftbchunks.no_wilderness.tooltip": "If true, chunks must be claimed before modifying.\nOverrides \"Protect Unclaimed Regions Per-Dimension\" when true",
+	"ftbchunks.no_wilderness_dimensions": "Protect Unclaimed Regions Per-Dimension",
+	"ftbchunks.no_wilderness_dimensions.tooltip": "List of dimension ID's where chunks must be claimed before modifying.\nE.g. add \"minecraft:the_nether\" to require chunks to be claimed in the Nether.\nWildcards are allowed, e.g. \"othermod:*\" matches all dimensions added by \"othermod\"",
 	"ftbchunks.force_disable_minimap": "Disable Minimap for Clients",
 	"ftbchunks.max_idle_days_before_unclaim": "Max Idle Days Before Unclaim",
 	"ftbchunks.max_idle_days_before_unclaim.tooltip": "If no team member logs in for this many days,\nthe team's claims will be released.\nSetting this to 0 disables auto-unclaiming.",
