chore: a couple of minor translation updates

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -154,13 +154,15 @@
 	"ftbchunks.claim_dimension_whitelist.tooltip": "Whitelist for dimension ID's where chunks may be claimed. If non-empty, dimension *must* be in this list (and also not in \"Dimension Blacklist\".\nSame syntax as for \"Dimension Blacklist\"",
 	"ftbchunks.no_wilderness": "Protect Unclaimed Regions",
 	"ftbchunks.no_wilderness.tooltip": "If true, chunks must be claimed before they can be built on",
+	"ftbchunks.no_wilderness_dimensions": "Protect Unclaimed Regions Per-Dimension",
+	"ftbchunks.no_wilderness_dimensions.tooltip": "List of dimension ID's where chunks must be claimed before modifying.\nE.g. add \"minecraft:the_nether\" to require chunks to be claimed in the Nether.\nWildcards are allowed, e.g. \"othermod:*\" matches all dimensions added by \"othermod\"",
 	"ftbchunks.force_disable_minimap": "Disable Minimap for Clients",
 	"ftbchunks.max_idle_days_before_unclaim": "Max Idle Days Before Unclaim",
 	"ftbchunks.max_idle_days_before_unclaim.tooltip": "If no team member logs in for this many days, the team's claims will be released.\nSetting this to 0 disables auto-unclaiming.",
 	"ftbchunks.max_idle_days_before_unforce": "Max Idle Days Before Unforceload",
 	"ftbchunks.max_idle_days_before_unforce.tooltip": "If no team member logs in for this many days, any force-loaded chunks will no longer be force-loaded.\nSetting this to 0 disables auto-unforceloading.",
 	"ftbchunks.long_range_tracker_interval": "Long Range Player Tracker Interval",
-	"ftbchunks.long_range_tracker_interval.tooltip": "Interval in ticks to send updates to clients with long-range player tracking data.\nLower values mean more frequent updates but more server load and network traffic;\n be careful with this, especially on busy servers.\nSetting this to 0 disables long-range tracking.",
+	"ftbchunks.long_range_tracker_interval.tooltip": "Interval in ticks to send updates to clients with long-range player tracking data.\nLower values mean more frequent updates but more server load and network traffic; be careful with this, especially on busy servers.\nSetting this to 0 disables long-range tracking.",
 	"ftbchunks.protect_unknown_explosions": "Prevent Explosions from Unknown Sources",
 	"ftbchunks.protect_unknown_explosions.tooltip": "Some explosion sources (e.g. Ghasts) can't be determined in code.\nIf this setting is true, damage from these explosion is prevented in protected chunks.",
 	"ftbchunks.hard_team_claim_limit": "Hard Max Team Claim Limit",
@@ -173,6 +175,8 @@
 	"ftbchunks.require_game_stage.tooltip": "If true, players must have the 'ftbchunks_mapping' game stage (KubeJS and/or Gamestages required) to be able to open the map or see the minimap",
 	"ftbchunks.location_mode_override": "Override Team \"Location Visibility\"",
 	"ftbchunks.location_mode_override.tooltip": "If true, team \"Location Visibility\" settings are ignored, and all players can see each other anywhere on the map",
+	"ftbchunks.max_prevented_log_age": "Fake Player Prevented Access Log Age",
+	"ftbchunks.max_prevented_log_age.tooltip": "Age in days to keep logs of prevented fake player access\nNote: not fully implemented feature; will be used in future to display & control access by fake players to your claims",
 	"ftbchunks.claim_result": "Chunks modified: %d / %d",
 	"ftbchunks.claim_result.other": "Unknown issues",
 	"ftbchunks.claim_result.not_owner": "Not the chunk owner",
