--- a/common/src/main/resources/assets/ftbchunks/lang/zh_cn.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/zh_cn.json
@@ -10,36 +10,147 @@
 	"ftbchunks.own_claimed_chunks_on_map": "在地图上显示你自己声明的区块",
 	"ftbchunks.in_world_waypoints": "在世界上显示路径点",
 	"ftbchunks.death_waypoints": "死亡时创建死亡路径点",
+	"ftbchunks.death_waypoint_autoremove_distance": "死亡点自动移除距离",
+	"ftbchunks.death_waypoint_autoremove_distance.tooltip": "若大于0，则当你与最近死亡点之间的距离小于设定值时，它将被移除",
 	"ftbchunks.map_mode": "地图模式",
+	"ftbchunks.zoom_warning": "受内存限制的最小缩放指数",
+	"ftbchunks.waypoint_fade_distance": "路径点光束淡出距离",
+	"ftbchunks.waypoint_dot_fade_distance": "路径点小点淡出距离",
+	"ftbchunks.biome_blend": "群系过渡",
+	"ftbchunks.biome_blend.none": "无（最快）",
+	"ftbchunks.biome_blend.blend_3x3": "过渡 3x3",
+	"ftbchunks.biome_blend.blend_5x5": "过渡 5x5",
+	"ftbchunks.biome_blend.blend_7x7": "过渡 7x7",
+	"ftbchunks.biome_blend.blend_9x9": "过渡 9x9",
+	"ftbchunks.biome_blend.blend_11x11": "过渡 11x11",
+	"ftbchunks.biome_blend.blend_13x13": "过渡 13x13",
+	"ftbchunks.biome_blend.blend_15x15": "过渡 15x15（最慢）",
 	"ftbchunks.water_height_factor": "水面权重系数",
-	"ftbchunks.minimap": "小地图位置",
-	"ftbchunks.minimap_scale": "小地图比例",
-	"ftbchunks.minimap_locked_north": "小地图锁定北方",
-	"ftbchunks.minimap_waypoints": "小地图路径点",
-	"ftbchunks.minimap_entities": "小地图实体",
-	"ftbchunks.minimap_entity_heads": "小地图实体图标",
-	"ftbchunks.minimap_player_heads": "小地图玩家图标",
-	"ftbchunks.minimap_large_entities": "小地图大型实体",
-	"ftbchunks.minimap_xyz": "小地图XYZ",
-	"ftbchunks.minimap_biome": "小地图生物群系",
-	"ftbchunks.minimap_blur": "小地图锐化",
-	"ftbchunks.minimap_compass": "小地图指南针",
-	"ftbchunks.minimap_visibility": "小地图透明度",
-	"ftbchunks.minimap_zone": "小地图zone",
+	"ftbchunks.only_surface_entities": "仅显示地表生物",
+	"ftbchunks.experimental_performance_improvement": "实验性性能优化",
+	"ftbchunks.memory": "内存占用",
+	"ftbchunks.minimap": "小地图",
+	"ftbchunks.minimap.enabled": "启用",
+	"ftbchunks.minimap.position": "位置",
+	"ftbchunks.minimap.position_offset_x": "水平位置偏移",
+	"ftbchunks.minimap.position_offset_y": "垂直位置偏移",
+	"ftbchunks.minimap.position_offset_condition": "位置偏移条件",
+	"ftbchunks.minimap.position.none": "无",
+	"ftbchunks.minimap.position.bottom_left": "左下",
+	"ftbchunks.minimap.position.left": "左",
+	"ftbchunks.minimap.position.top_left": "左上",
+	"ftbchunks.minimap.position.top_right": "右上",
+	"ftbchunks.minimap.position.right": "右",
+	"ftbchunks.minimap.position.bottom_right": "右下",
+	"ftbchunks.minimap.scale": "尺寸",
+	"ftbchunks.minimap.locked_north": "北向锁定",
+	"ftbchunks.minimap.waypoints": "路径点",
+	"ftbchunks.minimap.entities": "实体",
+	"ftbchunks.minimap.entity_heads": "实体头像",
+	"ftbchunks.minimap.player_heads": "玩家头像",
+	"ftbchunks.minimap.large_entities": "大型实体",
+	"ftbchunks.minimap.zoom": "小地图缩放",
+	"ftbchunks.minimap.xyz": "小地图坐标",
+	"ftbchunks.minimap.biome": "小地图群系",
+	"ftbchunks.minimap.blur_mode": "小地图模糊模式",
+	"ftbchunks.minimap.blur_mode.auto": "自动",
+	"ftbchunks.minimap.blur_mode.on": "开启",
+	"ftbchunks.minimap.blur_mode.off": "关闭",
+	"ftbchunks.minimap.compass": "小地图指南针",
+	"ftbchunks.minimap.visibility": "可见度",
+	"ftbchunks.minimap.zone": "区域",
+	"ftbchunks.minimap.square": "方形小地图",
 	"sidebar_button.ftbchunks.chunks": "FTB区块声明",
+	"key.categories.ftbchunks": "FTB区块声明",
 	"key.ftbchunks.map": "打开FTB区块声明地图",
+	"key.ftbchunks.minimap.zoomIn": "放大小地图",
+	"key.ftbchunks.minimap.zoomOut": "缩放小地图",
+	"key.ftbchunks.add_waypoint": "快速添加路径点",
+	"key.ftbchunks.waypoint_manager": "路径点列表",
 	"wilderness": "野外",
 	"ftbchunks.no_server_mod": "服务器需要此Mod！",
-	"ftbchunks.already_claimed": "此区块已被%s认领",
+	"ftbchunks.already_claimed": "该区块已被%s声明",
+	"ftbchunks.deathpoint_removed": "路径点“%s”已被自动移除",
 	"ftbchunks.gui.claimed": "已声明区块",
 	"ftbchunks.gui.force_loaded": "强制加载",
+	"ftbchunks.gui.force_load_expires": "强制加载已过时",
 	"ftbchunks.gui.allies": "盟友",
 	"ftbchunks.gui.ally_whitelist": "盟友白名单",
 	"ftbchunks.gui.ally_blacklist": "盟友黑名单",
 	"ftbchunks.gui.large_map": "大地图",
 	"ftbchunks.gui.claimed_chunks": "声明区块",
-	"ftbchunks.gui.waypoints": "路径点",
-	"ftbchunks.gui.add_waypoint": "添加路径点",
+	"ftbchunks.gui.waypoints": "路径点列表",
+	"ftbchunks.gui.add_waypoint": "新建路径点",
 	"ftbchunks.gui.settings": "设置",
-	"ftbchunks.gui.sync": "与盟友共享地图"
+	"ftbchunks.gui.settings.server": "服务器设置",
+	"ftbchunks.gui.sync": "与盟友共享地图",
+	"ftbchunks.gui.clear_deathpoints": "删除所有死亡路径点",
+	"ftbchunks.gui.delete_waypoint": "确定删除路径点“%s”吗？",
+	"ftbchunks.gui.change_color": "改变颜色",
+	"ftbchunks.gui.hold_alt_for_dates": "按住alt：显示绝对时间",
+	"ftbchunks.gui.mouse_wheel_expiry": "鼠标滚轮：调整强制加载过时时间",
+	"ftbchunks.gui.teleport": "传送",
+	"ftbteamsconfig.ftbchunks": "FTB区块声明配置",
+	"ftbteamsconfig.ftbchunks.allow_fake_players": "允许所有玩家假人",
+	"ftbteamsconfig.ftbchunks.allow_fake_players.tooltip": "将所有玩家假人视为盟友。\n注意：启用此项可能让恶意玩家通过假人玩家改变你的声明。若不确定，请禁用。",
+	"ftbteamsconfig.ftbchunks.allow_named_fake_players": "视为盟友的玩家假人名字或ID",
+	"ftbteamsconfig.ftbchunks.allow_named_fake_players.tooltip": "将这些玩家假人视为盟友。\n注意：启用此项可能让恶意玩家通过假人玩家改变你的声明。若不确定，请留空。",
+	"ftbteamsconfig.ftbchunks.allow_fake_players_by_id": "按玩家ID允许玩家假人",
+	"ftbteamsconfig.ftbchunks.allow_fake_players_by_id.tooltip": "若某真人玩家作为盟友或队员被允许这么做，则允许拥有同样ID的玩家假人改变你的声明。若不确定，请启用。",
+	"ftbteamsconfig.ftbchunks.allow_explosions": "允许爆炸破坏",
+	"ftbteamsconfig.ftbchunks.allow_explosions.tooltip": "已声明的区块内是否允许爆炸破坏方块？",
+	"ftbteamsconfig.ftbchunks.block_edit_and_interact_mode": "方块编辑/交互模式",
+	"ftbteamsconfig.ftbchunks.block_edit_and_interact_mode.tooltip": "方块在被放置、破坏，或交互时启用",
+	"ftbteamsconfig.ftbchunks.block_edit_mode": "方块编辑模式",
+	"ftbteamsconfig.ftbchunks.block_edit_mode.tooltip": "方块被防止或破坏时启用",
+	"ftbteamsconfig.ftbchunks.block_interact_mode": "方块交互模式",
+	"ftbteamsconfig.ftbchunks.block_interact_mode.tooltip": "方块被右键时启用，比如打开箱子或拉动拉杆",
+	"ftbteamsconfig.ftbchunks.entity_interact_mode": "实体交互模式",
+	"ftbteamsconfig.ftbchunks.entity_interact_mode.tooltip": "实体被右键时启用",
+	"ftbteamsconfig.ftbchunks.nonliving_entity_attack_mode": "非生物实体攻击模式",
+	"ftbteamsconfig.ftbchunks.nonliving_entity_attack_mode.tooltip": "左键非生物实体（船、物品展示框等）时启用",
+	"ftbteamsconfig.ftbchunks.minimap_mode": "小地图模式",
+	"ftbteamsconfig.ftbchunks.location_mode": "位置可见性",
+	"ftbteamsconfig.ftbchunks.location_mode.tooltip": "指定能在大小地图上看到你的玩家（在原版的追踪半径外）",
+	"ftbteamsconfig.ftbchunks.claim_visibility": "区块声明可见性",
+	"ftbteamsconfig.ftbchunks.claim_visibility.tooltip": "指定能在大小地图上看到你声明区块的玩家",
+	"ftbchunks.fake_players": "允许玩家假人",
+	"ftbchunks.fake_players.tooltip": "CHECK：像真人玩家那样检测玩家假人\nDENY：永不允许玩家假人\nALLOW：始终允许玩家假人",
+	"ftbchunks.max_claimed_chunks": "每个玩家最多声明的区块数量",
+	"ftbchunks.max_force_loaded_chunks": "每个玩家最多强制加载的区块数量",
+	"ftbchunks.chunk_load_offline": "允许离线玩家强制加载",
+	"ftbchunks.chunk_load_offline.tooltip": "强制加载模式设为“default”\n时的默认离线区块加载行为",
+	"ftbchunks.force_load_mode": "强制加载模式",
+	"ftbchunks.force_load_mode.tooltip": "NEVER：只在队伍中有至少一名在线玩家时允许强制加载\nALWAYS：始终允许强制加载，\n即使没有在线玩家\n默认：只要有一名队伍中的玩家拥有\n“ftbchunks.chunk_load_offline”FTB等级的许可，\n，就能强制加载，或启用了“允许离线玩家强制加载”。",
+	"ftbchunks.disable_protection": "禁用声明保护",
+	"ftbchunks.disable_protection.tooltip": "适用于玩家间可信任的私人的服务器\n或声明区块仅用于强制加载的情形",
+	"ftbchunks.ally_mode": "允许玩家修改盟友设置",
+	"ftbchunks.ally_mode.tooltip": "DEFAULT：FTB团队盟友的状态需被检测\nFORCED_ALL：所有玩家都被视为盟友\nFORCED_NONE：不会有被视为盟友的玩家",
+	"ftbchunks.claim_dimension_blacklist": "维度黑名单",
+	"ftbchunks.claim_dimension_blacklist.tooltip": "无法被声明区块的维度。\n比如，如果你希望禁用末地的区块声明，你可以添加\"minecraft:the_end\"到此栏",
+	"ftbchunks.no_wilderness": "保护未声明区块",
+	"ftbchunks.no_wilderness.tooltip": "若启用，区块在被声明前，无法放置方块",
+	"ftbchunks.force_disable_minimap": "在客户端禁用小地图",
+	"ftbchunks.max_idle_days_before_unclaim": "解除声明的闲置时间上限",
+	"ftbchunks.max_idle_days_before_unclaim.tooltip": "如果在设定值的天数内，队伍中没有玩家上线，\n则解除该队伍的区块声明。\n设为0将禁用自动声明解除。",
+	"ftbchunks.max_idle_days_before_unforce": "解除强制加载的限制时间上限",
+	"ftbchunks.max_idle_days_before_unforce.tooltip": "如果在设定值的天数内，队伍中没有玩家上线，\n则解除该队伍的强制加载。\n设为0将禁用自动强制加载解除。",
+	"ftbchunks.long_range_tracker_interval": "远距玩家追踪间隔",
+	"ftbchunks.long_range_tracker_interval.tooltip": "更新远距离玩家追踪数据的间隔（刻）。\n更低的值意味着更频繁的更新，但更大的服务器及网络负担；\n请谨慎设置，尤其在繁忙的服务器上。\n设为0将禁用远距追踪。",
+	"ftbchunks.protect_unknown_explosions": "防止来源未知的爆炸",
+	"ftbchunks.protect_unknown_explosions.tooltip": "有些爆炸的来源（如恶魂）无法在代码中被检测到。\n若启用，则会组织声明的区块中，未知来源的爆炸破坏",
+	"ftbchunks.hard_team_claim_limit": "队伍声明硬限制",
+	"ftbchunks.hard_team_claim_limit.tooltip": "队伍区块声明的硬限制，\n无视队员数量或队伍声明上限的计算模式",
+	"ftbchunks.hard_team_force_limit": "队伍区块加载硬限制",
+	"ftbchunks.hard_team_force_limit.tooltip": "队伍强制加载的硬限制，\n无视队员数量或队伍强制加载上限的计算模式",
+	"ftbchunks.party_limit_mode": "队伍声明/强制加载上限的计算模式",
+	"ftbchunks.party_limit_mode.tooltip": "队伍声明或强制加载上限的模式。\nLARGEST：使用队员中最大的上限\nSUM：累加所有队员的上限\nOWNER：只使用队长的上限\nAVERAGE：使用队员的平均上限。",
+	"ftbchunks.require_game_stage": "使用地图需解锁游戏阶段",
+	"ftbchunks.require_game_stage.tooltip": "若启用，玩家需要达到“ftbchunks_mapping”游戏阶段后（需要KubeJS或Gamestages模组）才能打开大地图或看到小地图",
+	"ftbchunks.memory.region_release_time": "闲置区域数据释放间隔",
+	"ftbchunks.memory.region_release_time.tooltip": "释放512x512的限制区域数据的间隔\n更小的值意味着更少的内存占用量，但由于被释放的区域被重载，将导致更频繁的硬盘访问\n设为0将禁用闲置区域数据释放。",
+	"ftbchunks.memory.autorelease_on_map_close": "大地图关闭时自动释放区域数据",
+	"ftbchunks.memory.autorelease_on_map_close.tooltip": "大地图关闭后，自动释放区域数据直至此值。\n更小的值意味着更少的内存占用量，但由于被释放的区域被重载，将导致更频繁的硬盘访问\n设为0将禁用大地图关闭时自动区域数据释放。",
+	"ftbchunks.memory.max_zoom_constraint": "地图缩放限制",
+	"ftbchunks.memory.max_zoom_constraint.tooltip": "若启用，将根据已探索的区域和内存限制，设置地图的最小缩放程度。\n若此项带来了不便，请禁用之。"
 }
